[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/DisplayDialog.gd" type="Script" id=1]
[ext_resource path="res://Assets/Icons/Remove.svg" type="Texture" id=2]
[ext_resource path="res://Assets/Icons/PagePrevious.svg" type="Texture" id=3]
[ext_resource path="res://Assets/Icons/PageLast.svg" type="Texture" id=4]
[ext_resource path="res://Assets/Icons/PageNext.svg" type="Texture" id=5]
[ext_resource path="res://Assets/Icons/Stop.svg" type="Texture" id=6]
[ext_resource path="res://Assets/Icons/Play.svg" type="Texture" id=7]
[ext_resource path="res://Assets/Icons/PageFirst.svg" type="Texture" id=8]
[ext_resource path="res://Assets/Icons/Loop.svg" type="Texture" id=9]
[ext_resource path="res://Assets/Icons/Reload.svg" type="Texture" id=10]
[ext_resource path="res://Assets/Icons/ImageTexture.svg" type="Texture" id=11]
[ext_resource path="res://Assets/Icons/SoundFile.svg" type="Texture" id=12]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Roboto-Bold.ttf"

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 1 )

[node name="DisplayDialog" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -88.0
margin_bottom = -53.0
rect_min_size = Vector2( 100, 100 )
resizable = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="VBoxContainer"]
margin_right = 1192.0
margin_bottom = 671.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6

[node name="Subtitle" type="Label" parent="VBoxContainer/Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 128.0
margin_top = -132.0
margin_right = -128.0
custom_colors/font_color = Color( 1, 0.976471, 0.87451, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 2 )
text = "pdvjpnj\\\\npn
njpn pkn kn pkn "
align = 1
valign = 1
clip_text = true
max_lines_visible = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 675.0
margin_right = 1192.0
margin_bottom = 715.0
alignment = 1

[node name="SubtitleEdit" type="TextEdit" parent="VBoxContainer/HBoxContainer"]
margin_right = 679.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 22 )
hint_tooltip = "Subtitles"
size_flags_horizontal = 3
wrap_enabled = true

[node name="FirstButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 683.0
margin_right = 707.0
margin_bottom = 40.0
hint_tooltip = "First frame"
icon = ExtResource( 8 )

[node name="PrevButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 711.0
margin_right = 735.0
margin_bottom = 40.0
hint_tooltip = " Previous frame"
icon = ExtResource( 3 )

[node name="PlayButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 739.0
margin_right = 767.0
margin_bottom = 40.0
hint_tooltip = "Play/pause"
icon = ExtResource( 7 )

[node name="StopButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 771.0
margin_right = 799.0
margin_bottom = 40.0
hint_tooltip = "Stop playback"
icon = ExtResource( 6 )

[node name="NextButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 803.0
margin_right = 827.0
margin_bottom = 40.0
hint_tooltip = " Next frame"
icon = ExtResource( 5 )

[node name="LastButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 831.0
margin_right = 855.0
margin_bottom = 40.0
hint_tooltip = "Last frame"
icon = ExtResource( 4 )

[node name="LoopButton" type="CheckButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 859.0
margin_right = 951.0
margin_bottom = 40.0
hint_tooltip = "Loop"
icon = ExtResource( 9 )

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 955.0
margin_top = 13.0
margin_right = 1018.0
margin_bottom = 27.0
text = "Duration: "
valign = 1

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
margin_left = 1022.0
margin_right = 1096.0
margin_bottom = 40.0
hint_tooltip = "Frame duration (in seconds)"
min_value = 0.1
max_value = 60.0
step = 0.1
page = 0.5
value = 1.0
align = 3
suffix = "s"

[node name="LoadButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 1100.0
margin_right = 1128.0
margin_bottom = 40.0
hint_tooltip = "Load image from file"
icon = ExtResource( 11 )

[node name="SoundButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 1132.0
margin_right = 1160.0
margin_bottom = 40.0
hint_tooltip = "Load sound from file"
icon = ExtResource( 12 )

[node name="DelSoundButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 209.0
margin_right = 237.0
margin_bottom = 24.0
hint_tooltip = "Remove sound"
icon = ExtResource( 2 )

[node name="ReloadButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 1164.0
margin_right = 1192.0
margin_bottom = 40.0
hint_tooltip = "Reload image and sound"
icon = ExtResource( 10 )
icon_align = 1

[node name="PlayTimer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="about_to_show" from="." to="." method="_on_DisplayDialog_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_DisplayDialog_popup_hide"]
[connection signal="gui_input" from="VBoxContainer/Control/TextureRect" to="." method="_on_TextureRect_gui_input"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/SubtitleEdit" to="." method="_on_SubtitleEdit_text_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/FirstButton" to="." method="_on_FirstButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PrevButton" to="." method="_on_PrevButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/StopButton" to="." method="_on_StopButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LastButton" to="." method="_on_LastButton_pressed"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/LoopButton" to="." method="_on_LoopButton_toggled"]
[connection signal="focus_entered" from="VBoxContainer/HBoxContainer/SpinBox" to="." method="_on_SpinBox_focus_entered"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/SoundButton" to="." method="_on_SoundButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/DelSoundButton" to="." method="_on_DelSoundButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ReloadButton" to="." method="_on_ReloadButton_pressed"]
[connection signal="timeout" from="PlayTimer" to="." method="_on_PlayTimer_timeout"]
